--- a/MemoApp/package.json
+++ b/MemoApp/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "expo": "~36.0.0",
+    "expo-font": "^8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
